crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__aggregation__aggregate_count_albums_plus_field.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "aggregates": {
      "how_many_albums": 10,
      "how_many_artist_ids": 10,
      "how_many_distinct_artist_ids": 8,
      "min_artist_id": 8,
      "max_artist_id": 15,
      "avg_artist_id": 11.5
    },
    "rows": [
      {
        "Title": "Out Of Exile"
      },
      {
        "Title": "BackBeat Soundtrack"
      },
      {
        "Title": "The Best Of Billy Cobham"
      },
      {
        "Title": "Alcohol Fueled Brewtality Live! [Disc 1]"
      },
      {
        "Title": "Alcohol Fueled Brewtality Live! [Disc 2]"
      },
      {
        "Title": "Black Sabbath"
      },
      {
        "Title": "Black Sabbath Vol. 4 (Remaster)"
      },
      {
        "Title": "Body Count"
      },
      {
        "Title": "Chemical Wedding"
      },
      {
        "Title": "The Best Of Buddy Guy - The Millenium Collection"
      }
    ]
  }
]
